interpolation for box classes

--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
   width: 100px;
 }
 .box-green-150 {
-  background: red;
+  background: green;
   width: 150px;
 }
 .box-blue-200 {
-  background: red;
+  background: blue;
   width: 200px;
 }
 
