--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,6 @@ $width: 100;
 
 /* WITHOUT MIXIN */
 
-/*
 .box {
   aspect-ratio: 1 / 1;
 
@@ -22,7 +21,6 @@ $width: 100;
     width: $width * 2;
   }
 }
-*/
 
 /* WITH MIXIN */
 
@@ -58,4 +56,37 @@ $width: 100;
   font-size: 4rem;
   @extend %extend-bold-text;
   @include mixin-uppercase-text();
+}
+
+/* Selector inside of Mixins */
+
+@mixin small-uppercase-span {
+  span {
+    font-size: 1rem;
+    text-transform: uppercase;
+  }
+}
+
+.page-title {
+  font-size: 4rem;
+  line-height: 1.1;
+  @include small-uppercase-span();
+}
+
+@mixin inverted-colors {
+  color: white;
+  background: black;
+
+  a {
+    color: yellow;
+  }
+
+  &__title {
+    font-size: 2.5rem;
+    color: #f07178;
+  }
+}
+
+.call-to-action {
+  @include inverted-colors();
 }
